# CMAN

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  enums.py  language.py
config/languages/: en_us.py  fake_localization.py  zh_cn.py
ui/cui/: __init__.py
