[tool.poetry]
name = "CMAN"
version = "0.0.1-dev"
description = "The Comprehensive Minecraft Archive Network"
authors = ["XYCode Kerman"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
